--- a/AMS/Views/MetaFields/Edit.cshtml
+++ b/AMS/Views/MetaFields/Edit.cshtml
@@ -1,44 +1,74 @@
 ﻿@model AMS.Models.MetaField
 
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "Meta Field";
+    ViewData["Action"] = "Edit";
 }
 
-<h1>Edit</h1>
-
-<h4>MetaField</h4>
-<hr />
 <div class="row">
-    <div class="col-md-4">
-        <form asp-action="Edit">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="Id" />
-            <input type="hidden" asp-for="TenantId" />
-            
-            <div class="form-group">
-                <label asp-for="FieldType" class="control-label"></label>
-                <select asp-for="FieldType" class="form-control"></select>
-                <span asp-validation-for="FieldType" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="CustomListId" class="control-label"></label>
-                <select asp-for="CustomListId" class="form-control" asp-items="ViewBag.CustomListId"></select>
-                <span asp-validation-for="CustomListId" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Name" class="control-label"></label>
-                <input asp-for="Name" class="form-control" />
-                <span asp-validation-for="Name" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+    <div class="offset-2 col-md-8">
+        <form asp-action="@ViewBag.Action" class="form-horizontal">
+            <div class="card">
+                <div class="card-header">
+                    <strong>@ViewBag.Title</strong>
+                    Form
+                </div>
+                <div class="card-body">
+                    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                    <!-- Id Hidden -->
+                    <input type="hidden" asp-for="Id" />
+
+                    <!-- TenantId Hidden -->
+                    <input type="hidden" asp-for="TenantId" value="@ViewData["TenantId"]" />
+
+                    <!-- Field Name Input -->
+                    <div class="form-group row">
+                        <label asp-for="Name" class="col-md-3 col-form-label"></label>
+                        <div class="col-md-9">
+                            <input asp-for="Name" class="form-control" />
+                            <span class="help-block"><small></small></span>
+                            <span asp-validation-for="Name" class="text-danger"></span>
+                        </div>
+                    </div>
+
+                    <!-- FieldType Select -->
+                    <div class="form-group row">
+                        <label asp-for="FieldType" class="col-md-3 col-form-label"></label>
+                        <div class="col-md-9">
+                            <select asp-for="FieldType" class="form-control" asp-items="Html.GetEnumSelectList<FieldType>()">
+                                <option disabled value="">--- SELECT ---</option>
+                            </select>
+                            <span class="help-block"><small></small></span>
+                            <span asp-validation-for="FieldType" class="text-danger"></span>
+                        </div>
+                    </div>
+
+                    <!-- CustomListId Select -->
+                    <div class="form-group row">
+                        <label asp-for="CustomListId" class="col-md-3 col-form-label"></label>
+                        <div class="col-md-9">
+                            <select asp-for="CustomListId" class="form-control" asp-items="ViewBag.CustomListId">
+                                <option value="">--- SELECT ---</option>
+                            </select>
+                            <span class="help-block"><small></small></span>
+                            <span asp-validation-for="CustomListId" class="text-danger"></span>
+                        </div>
+                    </div>
+
+
+                </div>
+                <div class="card-footer">
+                    <button type="submit" class="btn btn-sm btn-primary">
+                        <i class="fa fa-dot-circle-o"></i> Save
+                    </button>
+                    <button type="reset" class="btn btn-sm btn-danger">
+                        <i class="fa fa-ban"></i> Reset
+                    </button>
+                </div>
             </div>
         </form>
-    </div>
-</div>
 
-<div>
-    <a asp-action="Index">Back to List</a>
+    </div>
 </div>
 
 @section Scripts {
